--- a/static/style.css
+++ b/static/style.css
@@ -158,6 +158,19 @@ main {
     border-color: #f5c6cb;
 }
 
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.footer-container {
+    margin-top: auto; 
+}
 
 /* Footer Styles */
 .footer-container {
@@ -168,7 +181,7 @@ main {
 }
 
 .footer-section {
-    margin: .5rem;
+    margin: 0 .5rem;
     margin-bottom: 1.5rem;
 }
 
